Bug 392726 - Crash when doing right-click on the gradient fill stop opacity input box of a vector
Summary: Crash when doing right-click on the gradient fill stop opacity input box of a...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-04 15:01 UTC by mvowada
Modified: 2018-04-07 13:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
(Video) (1016.55 KB, video/mp4)
2018-04-04 15:01 UTC, mvowada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mvowada 2018-04-04 15:01:58 UTC
Created attachment 111823 [details]
(Video)

(Tested with Krita Version: 4.1.0-pre-alpha (git d3f5e19) appimage on Ubuntu 14.04 Unity)

Hi,

right-clicking the gradient fill stop opacity input box of a vector shape, crashes Krita (see video):

    1) fill a vector with gradient
    2) move to the pane "Tool Options docker > Fill tab > Gradient fill"
    3) do right-click on the stop Opacity input box

Actual Results: crash
Expected Reuslts: let to type in the box a value.
Comment 1 Dmitry Kazakov 2018-04-06 12:30:41 UTC
Git commit dddd8c489ce3d384b42b5f8c6e2eb15fef3067cb by Dmitry Kazakov.
Committed on 06/04/2018 at 12:30.
Pushed by dkazakov into branch 'master'.

Avoid cycling updates in KoFillConfigWidget

They may cause crashes if update handlers start
enter each other recursively.

M  +12   -0    libs/pigment/resources/KoStopGradient.cpp
M  +4    -1    libs/pigment/resources/KoStopGradient.h
M  +28   -0    libs/ui/widgets/KoFillConfigWidget.cpp
M  +3    -0    libs/ui/widgets/KoFillConfigWidget.h

https://commits.kde.org/krita/dddd8c489ce3d384b42b5f8c6e2eb15fef3067cb
Comment 2 Dmitry Kazakov 2018-04-07 13:45:59 UTC
Git commit 6ad330d7289d6a84024bf1fc064497b83b70c163 by Dmitry Kazakov.
Committed on 07/04/2018 at 13:28.
Pushed by dkazakov into branch 'krita/4.0'.

Avoid cycling updates in KoFillConfigWidget

They may cause crashes if update handlers start
enter each other recursively.

M  +12   -0    libs/pigment/resources/KoStopGradient.cpp
M  +4    -1    libs/pigment/resources/KoStopGradient.h
M  +28   -0    libs/ui/widgets/KoFillConfigWidget.cpp
M  +3    -0    libs/ui/widgets/KoFillConfigWidget.h

https://commits.kde.org/krita/6ad330d7289d6a84024bf1fc064497b83b70c163