Avoid cycling updates in KoFillConfigWidget

They may cause crashes if update handlers start
enter each other recursively.

BUG:392726